--- a/notebooks/Ch05-Iterations.ipynb
+++ b/notebooks/Ch05-Iterations.ipynb
@@ -329,13 +329,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "3\n",
+      "4\n",
+      "end!\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(5):\n",
     "    if i == 2:\n",
-    "        break\n",
+    "        continue\n",
     "    print(i)\n",
     "else:\n",
     "    print('end!')"
@@ -343,9 +355,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97 is prime\n"
+     ]
+    }
+   ],
    "source": [
     "# for... else example\n",
     "# write a program to test whether a given number is prime\n",
@@ -494,9 +514,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "Hapy new year!\n"
+     ]
+    }
+   ],
    "source": [
     "# while loop - countdown\n",
     "import time\n",
@@ -530,9 +568,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    print('Hello')\n",
@@ -543,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +599,8 @@
       "1\n",
       "2\n",
       "3\n",
-      "4\n"
+      "4\n",
+      "Look loop didn't encounter break\n"
      ]
     }
    ],
@@ -561,8 +608,6 @@
     "count = 1\n",
     "while count < 5:\n",
     "    print(count)\n",
-    "    if(count > 3):\n",
-    "        break\n",
     "    count += 1\n",
     "else:\n",
     "    print(\"Look loop didn't encounter break\")"
@@ -779,7 +824,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
