--- a/notebooks/Ch08-1-Lists.ipynb
+++ b/notebooks/Ch08-1-Lists.ipynb
@@ -42,11 +42,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "blist = list() # use list constructor"
+    "import string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0123456789\n"
+     ]
+    }
+   ],
+   "source": [
+    "blist = list(string.digits) # use list constructor\n",
+    "print(string.digits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(blist)"
    ]
   },
   {
@@ -82,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,30 +128,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hello', 2.0, 10, [10, ('hi', 'world'), 3.5], (1, 'uno')]\n"
+      "['hello', 2.0, 10, [10, ('hi', 'world'), 3.5], (1, 'uno')]\n",
+      "5\n"
      ]
     }
    ],
    "source": [
     "# print list\n",
-    "print(list3)"
+    "print(list3)\n",
+    "print(len(list3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
+     ]
+    }
+   ],
    "source": [
     "# quickly create a list of range of numbers between 1 and 19\n",
-    "list4 = list(range(1, 20, 1))"
+    "list4 = list(range(1, 20, 1))\n",
+    "print(list4)"
    ]
   },
   {
@@ -306,9 +353,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'list3' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# how many elements are there in list3?\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mlen\u001b[39m(list3)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'list3' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# how many elements are there in list3?\n",
     "len(list3)"
@@ -316,12 +375,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 'uno')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# what happens if you access an index equal to the size of the list\n",
-    "list3[5]"
+    "list3[4]"
    ]
   },
   {
@@ -353,9 +423,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Can we use negative index?\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Can you guess the output of the following code?\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(list3[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m6\u001b[39m])\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "# Can we use negative index?\n",
     "# Can you guess the output of the following code?\n",
@@ -382,23 +464,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "horsemen = [\"war\", \"famine\", \"pestilence\", [\"death\"]]\n",
-    "'death' in horsemen"
+    "['death'] in horsemen"
    ]
   },
   {
@@ -460,9 +542,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "2.0\n",
+      "10\n",
+      "[10, ('hi', 'world'), 3.5]\n",
+      "(1, 'uno')\n"
+     ]
+    }
+   ],
    "source": [
     "# common technique; use for loop\n",
     "for item in list3:\n",
@@ -471,9 +565,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "2.0\n",
+      "10\n",
+      "10\n",
+      "hi\n",
+      "world\n",
+      "3.5\n",
+      "1\n",
+      "uno\n"
+     ]
+    }
+   ],
    "source": [
     "for item in list3:\n",
     "    if isinstance(item, list) or isinstance(item, tuple):\n",
@@ -532,25 +642,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "list2"
+    "list2 = [\"Stuff\", \"More stuff\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hello', 2.0, 10, [10, ('hi', 'world'), 3.5], (1, 'uno')]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,18 +680,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Stuff',\n",
+       " 'More stuff',\n",
+       " 'hello',\n",
+       " 2.0,\n",
+       " 10,\n",
+       " [10, ('hi', 'world'), 3.5],\n",
+       " (1, 'uno')]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[0]*10"
    ]
@@ -613,12 +762,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 2-D list or matrix\n",
-    "matrix = [[1, 2], [3, 4], [5, 6]]"
+    "matrix = [[1, 2], [3, 4],[5,  6]]"
    ]
   },
   {
@@ -641,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,9 +800,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2], [3, 4], [50, 6]]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "matrix"
    ]
@@ -689,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,38 +860,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n"
+     ]
+    }
+   ],
    "source": [
     "print(alphas[:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'd', 'g', 'j', 'm', 'p', 's', 'v', 'y']\n"
+     ]
+    }
+   ],
    "source": [
     "print(alphas[::3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['b', 'c']\n"
+     ]
+    }
+   ],
    "source": [
     "print(alphas[1:3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(alphas[::-1])"
+    "alphas = alphas[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['z', 'y', 'x', 'w', 'v', 'u', 't', 's', 'r', 'q', 'p', 'o', 'n', 'm', 'l', 'k', 'j', 'i', 'h', 'g', 'f', 'e', 'd', 'c', 'b', 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(alphas)"
    ]
   },
   {
@@ -744,38 +945,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert string to list of characters\n",
-    "alphaList = list(string.ascii_lowercase)"
+    "alphaList = string.ascii_lowercase"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a',\n",
+       " 'b',\n",
+       " 'c',\n",
+       " 'd',\n",
+       " 'e',\n",
+       " 'f',\n",
+       " 'g',\n",
+       " 'h',\n",
+       " 'i',\n",
+       " 'j',\n",
+       " 'k',\n",
+       " 'l',\n",
+       " 'm',\n",
+       " 'n',\n",
+       " 'o',\n",
+       " 'p',\n",
+       " 'q',\n",
+       " 'r',\n",
+       " 's',\n",
+       " 't',\n",
+       " 'u',\n",
+       " 'v',\n",
+       " 'w',\n",
+       " 'x',\n",
+       " 'y',\n",
+       " 'z']"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "alphaList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# convert list to string by joining pairs of chars with a delimiter\n",
-    "alphaStr = ' '.join(alphaList)"
+    "alphaList = list(alphaList)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# convert list to string by joining pairs of chars with a delimiter\n",
+    "alphaStr = ''.join(alphaList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'abcdefghijklmnopqrstuvwxyz'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "alphaStr"
    ]
@@ -790,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,9 +1057,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "names_str = \"john, david, alice\"\n",
+    "names_str = 'J' + names_str[1::]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'John, david, alice'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['jake', 'David', 'Alice']"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "names"
    ]
@@ -899,16 +1197,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['z',\n",
+       " 'y',\n",
+       " 'x',\n",
+       " 'w',\n",
+       " 'v',\n",
+       " 'u',\n",
+       " 't',\n",
+       " 's',\n",
+       " 'r',\n",
+       " 'q',\n",
+       " 'p',\n",
+       " 'o',\n",
+       " 'n',\n",
+       " 'm',\n",
+       " 'l',\n",
+       " 'k',\n",
+       " 'j',\n",
+       " 'i',\n",
+       " 'h',\n",
+       " 'g',\n",
+       " 'f',\n",
+       " 'e',\n",
+       " 'd',\n",
+       " 'c',\n",
+       " 'b',\n",
+       " 'a']"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "alphas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,9 +1251,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['y',\n",
+       " 'x',\n",
+       " 'w',\n",
+       " 'v',\n",
+       " 'u',\n",
+       " 't',\n",
+       " 's',\n",
+       " 'r',\n",
+       " 'q',\n",
+       " 'p',\n",
+       " 'o',\n",
+       " 'n',\n",
+       " 'm',\n",
+       " 'l',\n",
+       " 'k',\n",
+       " 'j',\n",
+       " 'i',\n",
+       " 'h',\n",
+       " 'g',\n",
+       " 'f',\n",
+       " 'e',\n",
+       " 'd',\n",
+       " 'c',\n",
+       " 'b',\n",
+       " 'a']"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "alphas"
    ]
